--- a/index.html
+++ b/index.html
@@ -87,14 +87,15 @@
                         recognition.interimResults = true;
                         recognition.lang = 'en-US';
 
+                        
                         recognition.onresult = (event) => {
+                            let interimTranscript = '';
                             for (let i = event.resultIndex; i < event.results.length; ++i) {
-                                if (event.results[i].isFinal) {
-                                    transcriptBox.value += event.results[i][0].transcript + ' ';
-                                    transcriptBox.scrollTop = transcriptBox.scrollHeight;
-                                }
+                                interimTranscript += event.results[i][0].transcript;
                             }
+                            transcriptBox.value = interimTranscript;
                         };
+                        
 
 
                         recognition.onerror = (event) => {
