--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
     <button id="downloadSummaryBtn" style="display:none;">Download Summary</button>
     <button id="printSummaryBtn" style="display:none;">Print Summary</button>
   </section>
+  <section>
+    <h2>Ask About the Medical Book</h2>
+    <div id="chat-box"></div>
+    <textarea id="user-input" placeholder="Ask your question..." rows="3"></textarea>
+    <button id="askQuestionBtn">Ask Question</button>
+    <div id="spinner" style="display:none;">Loading...</div>
+  </section>
 
   <script>
     const startRecordBtn = document.getElementById('startRecord');
